--- a/app/static/css/chart-renderer.css
+++ b/app/static/css/chart-renderer.css
@@ -45,7 +45,7 @@
   display: none !important;
 }
 
- /*x轴切换开关
+ /*x轴切换开关*/
 .chart-xaxis-overlay{
   position:absolute;
   z-index:200;
@@ -105,7 +105,7 @@
 .switch-track,
 .switch-slider {
   touch-action: none;
-}*/
+}
 
 .fit-buttons{
   position: absolute;
