--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -549,6 +549,7 @@
       <div class="fc-chart-container bg-white rounded-xl shadow-md p-4 relative" id="chart-settings">
         <div id="chartRoot">
           <div id="chartHost" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
+          <div id="spectrumHost" style="height:0; overflow:hidden"></div>
         </div>
       </div>
     </div>
