--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -21,8 +21,8 @@
   <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.5.2/css/solid.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/tailwind.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/chart-renderer.css', v=1) }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=10) }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/chart-renderer.css', v=1) }}">
   <!-- bumped v to 4 to refresh new styles (fc-subrow__scenario-extra) -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/right-card.css', v=7) }}">
 </head>
@@ -547,9 +547,12 @@
 
       <!-- 图表 -->
       <div class="fc-chart-container bg-white rounded-xl shadow-md p-4 relative" id="chart-settings">
-        <div id="chartRoot">
-          <div id="chartHost" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
-          <div id="spectrumHost" style="height:0; overflow:hidden"></div>
+        <div class="chart-stack">
+          <div id="chartRoot" style="width:100%;height:600px;position:relative;overflow:hidden;"></div>
+          <!-- 去除剪裁层：只保留 Host + 内层 -->
+          <div id="spectrumHost">
+            <div class="spectrum-inner"></div>
+          </div>
         </div>
       </div>
     </div>
